[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Generic_Door/Door Open.wav" type="AudioStream" id=1]
[ext_resource path="res://Entities/Interactable/Interactable.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Slamming_Door/SlammingDoor.gd" type="Script" id=3]
[ext_resource path="res://Entities/Generic_Door/Generic Door.glb" type="PackedScene" id=4]
[ext_resource path="res://Entities/Generic_Door/Door Slam.wav" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=1]
margin = 0.001
extents = Vector3( 0.2, 0.2, 0.2 )

[node name="Spatial" type="Spatial"]

[node name="RotationHelper" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Generic Door" parent="RotationHelper" instance=ExtResource( 4 )]
transform = Transform( -0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.401767, 0.715548, 0 )

[node name="DoorOpenAudio" type="AudioStreamPlayer3D" parent="RotationHelper/Generic Door"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.399086, 0.808642, 0 )
stream = ExtResource( 1 )

[node name="KinematicBody" parent="RotationHelper/Generic Door" instance=ExtResource( 2 )]
transform = Transform( 19.9214, 0, 0, 0, 37.5435, 0, 0, 0, 1.99214, -0.0557034, 0.592551, 0 )

[node name="DoorSlamAudio" type="AudioStreamPlayer3D" parent="RotationHelper/Generic Door"]
stream = ExtResource( 5 )
unit_db = 80.0

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.0426483, 0, 2.02244, -0.632707 )
monitoring = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 39.9888, 0, 0, 0, 10.1127, 0, 0, 0, 48.2458, 0, 0, 0 )
shape = SubResource( 1 )

[connection signal="object_interacted" from="RotationHelper/Generic Door/KinematicBody" to="RotationHelper" method="_on_KinematicBody_object_interacted"]
[connection signal="body_entered" from="Area" to="RotationHelper" method="_on_Area_body_entered"]
